--- a/WAPP/Styles/style.css
+++ b/WAPP/Styles/style.css
@@ -1,11 +1,12 @@
 ﻿body {
     background-image: url('/Images/background.png');
     background-repeat: repeat;
+    font-family: 'Times New Roman' , Times, serif;
+    font-size: 11pt;
+    font-style: italic;
 }
 
-#top {
-    height: 10px;
-}
+#top { height: 10px; }
 
 #header {
     width: 960px;
@@ -33,7 +34,7 @@
     text-indent: -9999px;
 }
 
-#login-button {
+#loginNow {
     margin: 5px 5px 5px 20px;
     width: 50px;
     height: 25px;
@@ -42,6 +43,8 @@
     cursor: pointer;
     float: right;
     border-radius: 4px;
+    display: block;
+    text-indent: -9999px;
 }
 
 #logo {
@@ -54,7 +57,7 @@
 }
 
 #nav-bar {
-    background-color:#363537;
+    background-color: #363537;
     margin-top: 20px;
 }
 
@@ -67,26 +70,115 @@
     overflow: hidden;
 }
 
-#nav-bar li {
-    float:left;
-}
+#nav-bar li { float: left; }
 
 #nav-bar a:link, #nav-bar a:visited
 {
-    display:block;
-    width:120px;
+    display: block;
+    width: 120px;
     font-family: Utsaah;
     font-size: 18pt;
-    font-weight:bold;
-    color:#808080;
-    background-color:#363537;
-    text-align:center;
-    padding:5px;
-    text-decoration:none;
-    text-transform:uppercase;
+    font-weight: bold;
+    color: #808080;
+    background-color: #363537;
+    text-align: center;
+    padding: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
-#nav-bar a:hover, #nav-bar a:active
-{
-    color: #ebeaea;
+#nav-bar a:hover, #nav-bar a:active { color: #ebeaea; }
+
+#main-content {
+    width: 1000px;
+    min-height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#about-left {
+    width: 400px;
+    height: 280px;
+    padding: 10px 40px 10px 60px;
+    float: left;
+    color: #000000;
+    border-bottom: 1px dotted #848584;
+}
+
+#about-right {
+    width: 400px;
+    height: 280px;
+    padding: 10px 60px 10px 40px;
+    float: right;
+    color: #000000;
+    border-bottom: 1px dotted #848584;
+}
+
+#about-left h3, #about-right h3, #about-bottom h3, .title {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 14pt;
+    font-weight: bold;
+    font-style: normal;
+}
+
+#about-bottom {
+    width: 1000px;
+    height: 150px;
+    padding-top: 300px;
+}
+
+#board-members {
+    width: 600px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#board-members ul { 
+    width: 600px;
+    padding:0px;
+}
+
+#board-members .post li{
+    font-family: 'Segoe UI' , Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12pt;
+    font-weight: bold;
+}
+
+#about-bottom li {
+    list-style: none;
+    width: 200px;
+    float: left;
+    text-align: center;
+}
+
+#about-bottom h3 { text-align: center; }
+
+svg image:hover { opacity: 0; }
+
+#board-members.half-grayscale-container { width: 160px; }
+
+#board-members img.half-grayscale {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'saturate\' values=\'0.5\'/></filter></svg>#grayscale");
+    filter: gray alpha(opacity=50);
+    -webkit-filter: grayscale(80%);
+    -webkit-backface-visibility: hidden;
+    padding: 20px 20px 10px 20px;
+    float: left;
+}
+
+#board-members img.half-grayscale:hover {
+    filter: none;
+    -webkit-filter: grayscale(0%);
+}
+
+#schedule-map {
+    background-color: #ffffff;
+    width: 1000px;
+    height: 440px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
