--- a/WAPP/Styles/style.css
+++ b/WAPP/Styles/style.css
@@ -182,3 +182,76 @@ svg image:hover { opacity: 0; }
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+#login input { font-family: Arial, Helvetica, sans-serif; }
+
+#login {
+  width:300px;
+  position:relative;
+  margin:50px auto;
+}
+
+#form1 {
+  border-radius:10px;
+  padding:10px 0 10px 20px;
+  background-color:#111;
+}
+
+#login input {
+  line-height:2em;
+  font-size:1em;
+  border:0;
+  height:1.5em;
+  display:block;
+  width:270px;
+  background:transparent;
+  color:#999;
+  margin:0;
+  padding:.5em .5em 1em;
+}
+
+#login input[type="password"] { padding:1em .5em .5em; }
+
+.spacer {
+  height:0;
+  border-bottom:3px solid #adacac;
+  margin:0 0 0 5px;
+}
+
+#login input[type="submit"] {
+  background-color:#111;
+  color:#666;
+  position:absolute;
+  bottom:35px;
+  right:-15px;
+  box-shadow:0 0 1px 4px #adacac;
+  border-radius:50px;
+  width:75px;
+  height:50px;
+  padding:0;
+  -webkit-transition: all .1s linear;
+  -o-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+  -ms-transition: all .1s linear;
+  -kthtml-transition: all .1s linear;
+  transition: all .1s linear;
+}
+
+#login input[type="submit"]:hover {
+  cursor:pointer;
+  box-shadow:0 0 1px 6px #adacac;
+  color:#c1c2c2;
+  -webkit-transition: all .1s linear;
+  -o-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+  -ms-transition: all .1s linear;
+  -kthtml-transition: all .1s linear;
+  transition: all .1s linear;
+}
+
+::-webkit-input-placeholder { color:#a0a1a1; }
+
+
+#login input[type="submit"]::-moz-focus-inner { border:0; }
+
+#login input:focus { outline:0; }
