--- a/WAPP/Styles/style.css
+++ b/WAPP/Styles/style.css
@@ -188,7 +188,7 @@ svg image:hover { opacity: 0; }
 #login {
   width:300px;
   position:relative;
-  margin:50px auto;
+  margin:100px auto 10px auto;
 }
 
 #form1 {
@@ -214,7 +214,7 @@ svg image:hover { opacity: 0; }
 
 .spacer {
   height:0;
-  border-bottom:3px solid #adacac;
+  border-bottom:3px solid #a0a1a1;
   margin:0 0 0 5px;
 }
 
@@ -224,7 +224,7 @@ svg image:hover { opacity: 0; }
   position:absolute;
   bottom:35px;
   right:-15px;
-  box-shadow:0 0 1px 4px #adacac;
+  box-shadow:0 0 1px 4px #a0a1a1;
   border-radius:50px;
   width:75px;
   height:50px;
@@ -239,7 +239,7 @@ svg image:hover { opacity: 0; }
 
 #login input[type="submit"]:hover {
   cursor:pointer;
-  box-shadow:0 0 1px 6px #adacac;
+  box-shadow:0 0 1px 6px #a0a1a1;
   color:#c1c2c2;
   -webkit-transition: all .1s linear;
   -o-transition: all .1s linear;
@@ -255,3 +255,11 @@ svg image:hover { opacity: 0; }
 #login input[type="submit"]::-moz-focus-inner { border:0; }
 
 #login input:focus { outline:0; }
+
+#back {
+    width: 300px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+}
