gallery(done), register page(done)

--- a/WAPP/Styles/style.css
+++ b/WAPP/Styles/style.css
@@ -96,6 +96,7 @@
     margin-right: auto;
 }
 
+/*ABOUT PAGE*/
 #about-left {
     width: 400px;
     height: 280px;
@@ -172,6 +173,7 @@ svg image:hover { opacity: 0; }
     filter: none;
     -webkit-filter: grayscale(0%);
 }
+/*ABOUT PAGE - END*/
 
 #schedule-map {
     background-color: #ffffff;
@@ -183,6 +185,7 @@ svg image:hover { opacity: 0; }
     margin-bottom: 30px;
 }
 
+/*LOGIN PAGE*/
 #login input { font-family: Arial, Helvetica, sans-serif; }
 
 #login {
@@ -191,10 +194,10 @@ svg image:hover { opacity: 0; }
   margin:100px auto 10px auto;
 }
 
-#form1 {
+#loginForm {
   border-radius:10px;
   padding:10px 0 10px 20px;
-  background-color:#111;
+  background-color:#2e2d2d;
 }
 
 #login input {
@@ -214,17 +217,17 @@ svg image:hover { opacity: 0; }
 
 .spacer {
   height:0;
-  border-bottom:3px solid #a0a1a1;
+  border-bottom:3px solid #c1c2c2;
   margin:0 0 0 5px;
 }
 
 #login input[type="submit"] {
-  background-color:#111;
+  background-color: #2e2d2d;
   color:#666;
   position:absolute;
   bottom:35px;
   right:-15px;
-  box-shadow:0 0 1px 4px #a0a1a1;
+  box-shadow:0 0 1px 4px #c1c2c2;
   border-radius:50px;
   width:75px;
   height:50px;
@@ -239,7 +242,7 @@ svg image:hover { opacity: 0; }
 
 #login input[type="submit"]:hover {
   cursor:pointer;
-  box-shadow:0 0 1px 6px #a0a1a1;
+  box-shadow:0 0 1px 6px #c1c2c2;
   color:#c1c2c2;
   -webkit-transition: all .1s linear;
   -o-transition: all .1s linear;
@@ -248,9 +251,6 @@ svg image:hover { opacity: 0; }
   -kthtml-transition: all .1s linear;
   transition: all .1s linear;
 }
-
-::-webkit-input-placeholder { color:#a0a1a1; }
-
 
 #login input[type="submit"]::-moz-focus-inner { border:0; }
 
@@ -264,3 +264,121 @@ svg image:hover { opacity: 0; }
     margin-top: 0;
     text-align: center;
 }
+/*LOGIN PAGE - END*/
+
+/*SIGN UP PAGE*/
+.sign-up{
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+}
+.register{
+  margin-top: 50px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.register-heading{
+  font: 1.8em/48px Arial, Helvetica, sans-serif;
+  color: #2e2d2d;
+}
+
+.input-txt{
+  width: 100%;
+  padding: 15px;
+  background: #dbdddd;
+  border: none;
+  color: #808080;
+  border-bottom: 1px dotted rgba(250, 250, 250, .4);
+  margin: 3px;
+}
+.signUp-footer{
+  margin: 10px 0;
+  overflow: hidden;
+  float: left;
+  width: 480px;
+}
+.register-button{
+  padding: 13px 30px;
+  border: none;
+  background: #2e2d2d;
+  color: #ebeaea;
+  float: right;
+}
+
+.register-button:hover {
+    background: #f1c90c;
+}
+
+.home-link{
+  font-size: .8em;
+  line-height: 3em;
+  color: #2e2d2d;
+  text-decoration: none;
+}
+/*SIGN UP PAGE - END*/
+
+/*GALLERY PAGE*/
+#gallery-columns {
+    width: 1000px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-column-count: 3;
+    -webkit-column-gap: 10px;
+    -webkit-column-fill: auto;
+    -moz-column-count: 3;
+    -moz-column-gap: 10px;
+    -moz-column-fill: auto;
+    column-count: 5;
+    column-gap: 15px;
+    column-fill: auto;
+}
+
+
+.frame {
+    display: inline-block;
+    background: #FEFEFE;
+    border: 2px solid #FAFAFA;
+    box-shadow: 0 1px 1px rgba(34, 25, 25, 0.4);
+    margin: 0 2px 15px;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    -o-column-break-inside: avoid;
+    -ms-column-break-inside: avoid;
+    padding: 10px;
+    padding-bottom: 5px;
+    background: white;
+    opacity: 1;
+    -webkit-transition: background .2s ease;
+    -o-transition: background .2s ease;
+    -moz-transition: background .2s ease;
+    -ms-transition: background .2s ease;
+    transition: background .2s ease;
+}
+
+.frame img {
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 15px;
+    margin-bottom: 5px;
+}
+
+.frame p {
+    font: 12px/18px;
+    color: #333;
+    margin: 0;
+}
+
+@media (min-width: 1100px) {
+    #gallery-columns {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+    }
+}
+
+#gallery-columns:hover .frame:not(:hover) {
+opacity: 0.6;
+}
+/*GALLERY PAGE - END*/
